# nix

./: .gitignore  .sops.yaml  LICENSE  flake.nix  install.sh  secrets.yaml
disko/: backup_usb_drive.nix  common.nix  default.nix  dual.nix  dual_luks.nix  luks.nix
docs/: removed-openvino-npu.md  sops-guide.md
dotfiles/: .zshrc  LICENSE
dotfiles/dunst/: dunstrc
dotfiles/firefox/: customvideohotkeys.js  olx-search-raiting.js  tridactyl-keymaps.md  tridactylrc
dotfiles/foot/: foot.ini
dotfiles/hypr/: hypridle.conf  hyprland.conf  hyprland.lua  hyprlock.conf  hyprpaper.conf  hyprsunset.conf  monitors.conf  xdph.conf
dotfiles/imv/: config
dotfiles/khal/: config.example
dotfiles/mpv/: mpv.conf
dotfiles/nvim/: lazy-lock.json
dotfiles/quickshell/: Bar.qml  README.md  calendar-map.example.json  notif-rules.json  shell.qml
dotfiles/television/: config.toml
home/: default.nix  firefox.nix  laptop.nix  pokit.nix  theming.nix  touchpad.nix  xdg.nix
installer/: __init__.py  __main__.py  app.py  discovery.py  exceptions.py  installer.tcss  models.py  preflight.py  runner.py  steps.py
modules/: audio.nix  base.nix  boot-desktop.nix  desktop.nix  dokit.nix  fingerprint.nix  gaming.nix  intel-lunar-lake.nix  lsp.nix  mt7927.nix  networking.nix  nvidia.nix  printing.nix  security-keys.nix  server.nix  shell.nix  sops.nix  sunshine.nix  syncthing.nix  transmission.nix  zenpower5.nix
modules/pokitd/src/: CMakeLists.txt  device.cpp  device.h  json.cpp  json.h  main.cpp  server.cpp  server.h  session.cpp  session.h
pkgs/: glide-browser.nix  monique.nix
(+201 files in other folders)
